fix: clean swagger params documentation
