# docs/swagger.json
@@ -157,7 +157,7 @@
                         "type": "integer",
                         "description": "Ad ID",
                         "name": "id",
-                        "in": "query",
+                        "in": "path",
                         "required": true
                     }
                 ],
@@ -184,7 +184,6 @@
             }
         },
         "/ads/{id}/status": {
-        "/bookmarks/add/{id}": {
             "put": {
                 "security": [
                     {
@@ -192,7 +191,6 @@
                     }
                 ],
                 "description": "Update the status of an ad",
-                "description": "add bookmark using given ad id",
                 "consumes": [
                     "application/json"
                 ],
@@ -203,9 +201,6 @@
                     "Ads"
                 ],
                 "summary": "Update ad status",
-                    "bookmarks"
-                ],
-                "summary": "add bookmark",
                 "parameters": [
                     {
                         "type": "string",
@@ -234,6 +229,63 @@
                 "responses": {
                     "200": {
                         "description": "Updated successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid parameter id",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Could not update ads status",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/bookmarks/add/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "add bookmark using given ad id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bookmarks"
+                ],
+                "summary": "add bookmark",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Ad ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -305,22 +357,6 @@
                             "type": "string"
                         }
                     },
-                    "400": {
-                        "description": "Invalid parameter id",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Could not update ads status",
-                        "schema": {
-                            "type": "string"
                     "403": {
                         "description": "Forbidden",
                         "schema": {
@@ -403,6 +439,13 @@
                 "summary": "retrieve expert check request by ad for expert or user",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "ad ID",
                         "name": "adID",
@@ -444,6 +487,13 @@
                 ],
                 "summary": "delete expert check request for expert or user",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "ad ID",
@@ -495,6 +545,13 @@
                 "summary": "Request to expert check",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "Ad ID",
                         "name": "adID",
@@ -544,6 +601,13 @@
                 ],
                 "summary": "Update expert check request",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "expert request ID",
@@ -598,6 +662,13 @@
                 "summary": "retrieve expert check request for expert or user",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
                         "type": "integer",
                         "description": "request ID",
                         "name": "requestID",
@@ -641,6 +712,13 @@
                 ],
                 "summary": "ListExpertRequest retrieves all expert requests for an expert",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User Token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
                     {
                         "type": "integer",
                         "description": "User ID",
@@ -1258,16 +1336,6 @@
                 }
             }
         },
-        "consts.AdStatus": {
-            "type": "string",
-            "enum": [
-                "Inactive",
-                "Active"
-            ],
-            "x-enum-varnames": [
-                "INACTIVE",
-                "ACTIVE"
-            ]
         "bookmarks.ErrorAddAd": {
             "type": "object",
             "properties": {
@@ -1278,6 +1346,17 @@
                     "type": "integer"
                 }
             }
+        },
+        "consts.AdStatus": {
+            "type": "string",
+            "enum": [
+                "Inactive",
+                "Active"
+            ],
+            "x-enum-varnames": [
+                "INACTIVE",
+                "ACTIVE"
+            ]
         },
         "consts.Status": {
             "type": "string",
@@ -1431,9 +1510,6 @@
                 "subject": {
                     "type": "string"
                 },
-                "user": {
-                    "$ref": "#/definitions/models.User"
-                },
                 "userID": {
                     "type": "integer"
                 }
@@ -1477,23 +1553,6 @@
                 },
                 "subject": {
                     "type": "string"
-                },
-                "userID": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.Bookmarks": {
-            "type": "object",
-            "properties": {
-                "ads": {
-                    "$ref": "#/definitions/models.Ad"
-                },
-                "adsID": {
-                    "type": "integer"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.User"
                 },
                 "userID": {
                     "type": "integer"
