# handlers/expert/http.go
@@ -29,6 +29,7 @@ func NewExpertHandler(expertDS datastore.Expert, userDS datastore.User) *ExpertH
 // @Tags expert
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "User Token"
 // @Param adID path int true "Ad ID"
 // @Success 200 {object} models.SuccessResponse
 // @Failure 204 {object} models.ErrorResponse
@@ -69,6 +70,7 @@ func (e *ExpertHandler) RequestToExpertCheck(c echo.Context) error {
 // @Summary ListExpertRequest retrieves all expert requests for an expert
 // @Description ListExpertRequest retrieves all expert requests for an expert
 // @Tags expert
+// @Param Authorization header string true "User Token"
 // @Param user_id query int false "User ID"
 // @Param ads_id query int false "Ad ID"
 // @Param from_date query string false "From date"
@@ -161,6 +163,7 @@ func (e *ExpertHandler) GetAllExpertRequest(c echo.Context) error {
 // @Tags expert
 // @Accept json
 // @Produce json
+// @Param Authorization header string true "User Token"
 // @Param expertRequestID path int true "expert request ID"
 // @Param expertCheckRequest body models.UpdateExpertCheckRequest true "Expert check object"
 // @Success 200 {object} models.ExpertRequestResponse
@@ -213,6 +216,7 @@ func (e *ExpertHandler) UpdateCheckExpert(c echo.Context) error {
 // @Summary retrieve expert check request by ad for expert or user
 // @Description retrieve expert check request by ad for expert or user
 // @Tags expert
+// @Param Authorization header string true "User Token"
 // @Param adID path int true "ad ID"
 // @Success 200 {object} models.GetExpertRequestResponse
 // @Failure 204 {object} models.ErrorResponse
@@ -257,6 +261,7 @@ func (e *ExpertHandler) GetExpertRequestByAd(c echo.Context) error {
 // @Summary retrieve expert check request for expert or user
 // @Description retrieve expert check request for expert or user
 // @Tags expert
+// @Param Authorization header string true "User Token"
 // @Param requestID path int true "request ID"
 // @Success 200 {object} models.GetExpertRequestResponse
 // @Failure 204 {object} models.ErrorResponse
@@ -301,6 +306,7 @@ func (e *ExpertHandler) GetExpertRequest(c echo.Context) error {
 // @Summary delete expert check request for expert or user
 // @Description delete expert check request for expert or user
 // @Tags expert
+// @Param Authorization header string true "User Token"
 // @Param adID path int true "ad ID"
 // @Success 200 {object} models.SuccessResponse
 // @Failure 204 {object} models.ErrorResponse
